<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/light_blue"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.books.BooksFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="title" />

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/book_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/rank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:text="@string/rank"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/book_image"
            app:layout_constraintTop_toBottomOf="@id/book_image" />

        <TextView
            android:id="@+id/rank_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/rank_name"
            app:layout_constraintTop_toTopOf="@+id/rank_name"
            tools:text="1" />

        <TextView
            android:id="@+id/description_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/rank_name"
            app:layout_constraintTop_toBottomOf="@id/rank_name" />

        <TextView
            android:id="@+id/description_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/description_name"
            app:layout_constraintTop_toBottomOf="@+id/description_name"
            tools:text="some descr" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/description_name"
            app:layout_constraintTop_toBottomOf="@+id/description_value" />

        <TextView
            android:id="@+id/author_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/author_name"
            app:layout_constraintTop_toTopOf="@id/author_name"
            tools:text="some author" />

        <TextView
            android:id="@+id/publisher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/publisher"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/author_name"
            app:layout_constraintTop_toBottomOf="@id/author_name" />

        <TextView
            android:id="@+id/publisher_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            android:paddingBottom="12dp"
            app:layout_constraintStart_toEndOf="@id/publisher_name"
            app:layout_constraintTop_toTopOf="@id/publisher_name"
            tools:text="some publisher" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>